# rai

./: .gitignore  Cargo.toml  README.md  build.rs  config.toml
.github/workflows/: rust-gcov.yml  rust.gcov.yml  rust.yml
mugen/: Cargo.toml
src/: asteroids.rs  asteroids_individual.rs  bana_individ.rs  collision.rs  distro.rs  evo_algo.rs  hrm.rs  individual.rs  leven.rs  lib.rs  lifetime.rs  main.rs  neat.rs  nn.rs  promise.rs  results.rs  runner.rs  scheduler.rs  spooky.rs  tree_branch.rs  utils.rs  watcher.rs
