[package]
name = "rai"
version = "0.1.0"
authors = ["brandon phelps <bwp44f@mst.edu>"]
edition = "2018"
build="build.rs"

include = ["resources/fonts/lazy.ttf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.7.3"
more-asserts="0.2"
prgrs="0.6.4"
mugen={path="mugen", version="0.1.0"}

[dependencies.rasteroids]
git = "https://github.com/brandonphelps/rasteroids.git"
branch = "main"

[dependencies.sdl2]
version="0.34"
default-features = false
features = ["ttf", "image"]