[package]
name = "rai"
version = "0.1.0"
authors = ["brandon phelps <bwp44f@mst.edu>"]
edition = "2018"
build="build.rs"

include = ["resources/fonts/lazy.ttf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
rand="0.7.3"
more-asserts="0.2"
prgrs="0.6.4"
chrono = "*"
git2 = "0.13"
serde= { version = "*", features = ["derive"]}
serde_json = "*"
beanstalkc = { version = "*" } 
hsl = { version = "0.1.1" } 

[dependencies.rasteroids]
git = "https://github.com/brandonphelps/rasteroids.git"
branch = "main"
default-features = true

[dependencies.sdl2]
version="0.34"
default-features = false
features = ["ttf", "image"]
optional = true

[features]
default = []
gui = ["sdl2"]


[[bin]]
name = "scheduler"
path = "src/main.rs"
required-features = []


[[bin]]
name = "watcher"
path = "src/watcher.rs"
required-features = ["gui", "rasteroids/gui"]


[[bin]]
name = "runner"
path = "src/runner.rs"

[[bin]]
name = "game_of_life"
path = "src/game_of_life.rs"
required-features = ["gui"]